--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Arduino-ThermistorLibrary
+name=ThermistorLibrary
 version=1.0.3
 author= Miguel Califa <miguelangel5612@gmail.com>
 maintainer= Miguel Califa <miguelangel5612@gmail.com>
