--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence= This library allows you to read the thermistors very easily.
 paragraph= This library allows an Arduino/Genuino board to read thermistors very easily.
 category= Sensors
 url=https://github.com/miguel5612/Arduino-ThermistorLibrary
-architectures=avr
+architectures=avr,stm32
 license=MIT
